# mccstats

./: .gitignore  .replit  LICENSE.txt  README.md  coin-rankings.css  container.css  getStats.py  main.js  main.py  pyproject.toml  style.css  team_template.html  timed-cacher.py  tracker.html
db/: participants-red.json
static/db/: individualScores.json  participantsAQUA.json  participantsBLUE.json  participantsCYAN.json  participantsGREEN.json  participantsLIME.json  participantsORANGE.json  participantsPINK.json  participantsPURPLE.json  participantsRED.json  participantsYELLOW.json
static/styles/: container.css  css-reset.css  player-list.css  style.css  team-avg.css  total-player-coins.css  total-team-coins.css
styles/: container.css  css-reset.css  game-player-coins.css  player-coins.css  player-list.css  style.css  team-avg.css  total-player-coins.css  total-team-coins.css
templates/: tracker.html
